Added Google Analytics + Fixed some tiny bugs

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -22,6 +22,10 @@ blockquote {
   font-style: italic;
 }
 
+.lead {
+  font-size: 1.17em; // Bootstrap sets only 16px for mobile so we want this to be more responsive
+}
+
 .post-content { 
   margin: auto; // Center the text...
   max-width: 32em; // ... and limit to a reasonable width of 45-90 characters
