--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -22,6 +22,10 @@ blockquote {
   font-style: italic;
 }
 
+img {
+  max-width: 100%;
+}
+
 .lead {
   font-size: 1.17em; // Bootstrap sets only 16px for mobile so we want this to be more responsive
 }
