Changed CSS a bit: black nav and gray post background

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -35,8 +35,9 @@ img {
   max-width: 32em; // ... and limit to a reasonable width of 45-90 characters
 }
 
-.container {
-  background-color: white;
+.post {
+  background-color: #F2F2F2;
+  padding: 1em;
 }
 
 footer {
