--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,28 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-meta">
+      <!-- Whitespace added for readability -->
+      {% assign m = page.date | date: "%-m" %}
+      {{ page.date | date: "%-d" }}
+      {% case m %}
+        {% when '1' %}janvier
+        {% when '2' %}février
+        {% when '3' %}mars
+        {% when '4' %}avril
+        {% when '5' %}mai
+        {% when '6' %}juin
+        {% when '7' %}juillet
+        {% when '8' %}août
+        {% when '9' %}septembre
+        {% when '10' %}octobre
+        {% when '11' %}novembre
+        {% when '12' %}décembre
+      {% endcase %}
+      {{ page.date | date: "%Y" }}
+      {% if page.author %} • {{ page.author }}{% endif %}
+      {% if page.meta %} • {{ page.meta }}{% endif %}
+    </p>
   </header>
 
   <article class="post-content">
