New post: Neutral Milk Hotel, une Introduction

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -7,7 +7,7 @@
 
 body {
   background: url('/assets/images/retina_wood.png');
-  font-size: 1.8em;    // Butterick's reco: 15-25 pixels, here we aim 16 pixels.
+  font-size: 1.8em;    // Butterick's reco: 15-25 pixels, here we aim 18 pixels.
   line-height: 1.4em;  // 120-145%, here we aim 140%.
   font-family: 'Alegreya', serif;
   color: #444;
@@ -44,6 +44,10 @@ footer {
   color: #999;
   margin-top: 3em;
   border-top: thin solid #999;
+}
+
+.dr-playlist {
+  padding: 1em 0; // Leave space around the playlist button...
 }
 
 .dr-playlist button {
