--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,16 @@
               <i class="fa fa-facebook"></i>
             </a>
           </li>
+          <li>
+            <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+              <i class="fa fa-rss"></i>
+            </a>
+          </li>
+          <li>
+            <a href="{{ site.postatic_url }}">
+              <i class="fa fa-newspaper-o"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
