--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+  <script src="//use.typekit.net/ziv3ndd.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
 </head>
