Removed lateral padding on the .post

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -52,9 +52,10 @@ img {
   max-width: 32em; // ... and limit to a reasonable width of 45-90 characters
 }
 
-.post {
-  padding: 0 1em;
-}
+//.post {
+//  I don't think the padding is necessary anymore
+//  padding: 0 1em;
+//}
 
 footer {
   color: #999;
