--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,10 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}{% endif %}">
-
+  {% for author in page.authors %}
+  <meta name="author" content="{{ author }}">
+  {% endfor %}
+  
   <link rel="stylesheet" href="{{ "/assets/css/application.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
