--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">
+    <address class="post-meta">
+      <time pubdate datetime="{{ page.date }}">
       <!-- Whitespace added for readability -->
       {% assign m = page.date | date: "%-m" %}
       {{ page.date | date: "%-d" }}
@@ -24,8 +25,16 @@ layout: default
         {% when '12' %}décembre
       {% endcase %}
       {{ page.date | date: "%Y" }}
-      {% if page.author %} • {{ page.author }}{% endif %}
+      </time>
+      {% if page.authors %}
+      — par
+      {% for author in page.authors %}
+      <a rel="author" href="/{{ author | replace: ' ', '_' | downcase | prepend: site.baseurl }}/">{{ author }}</a>
+      {% endfor %} 
+      {% endif %}
+
       {% if page.meta %} • {{ page.meta }}{% endif %}
+      
     </p>
   </header>
 
