--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -60,15 +60,49 @@ img {
   }
 }
 
+#disqus-comments {
+  display: none;
+}
+
 //.post {
 //  I don't think the padding is necessary anymore
 //  padding: 0 1em;
 //}
 
 footer {
-  color: #999;
+  h2 {
+    font-size: 1.2em;
+  }
+  padding: 1em;
+  background-color: @mybrown;
+  color: @myyellow;
   margin-top: 3em;
-  border-top: thin solid #999;
+  border: none;
+  font-family: @headings-font-family;
+  font-size: 0.6em;
+  line-height: 1.4em;
+  
+  img {
+    max-width: 4em;
+  }
+  
+  ul {
+    list-style-type: none; // No bullet
+    padding: 0;
+    
+    li {
+      display: inline;
+      margin-right: 1em;
+    }
+  }
+  
+  a {
+    color: inherit;
+  }
+  
+  a:hover {
+    color: white;
+  }
 }
 
 .dr-playlist {
