--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       var disqus_shortname = "deadrooster";
       var disqus_identifier = "{{ page.uuid }}";
       var disqus_title = "{{ page.title }}";
-      var disqus_url = "{{ page.url }}";
+      var disqus_url = "{{ site.url }}{{ page.url }}";
       
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
