Changed font to vinyl

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -1,6 +1,6 @@
 //@navbar-margin-bottom: 0; <-- Uncomment to remove the little appearing background between navbar and content 
 
-@headings-font-family: "ff-dax-compact-web-pro", sans-serif;
+@headings-font-family: "vinyl", sans-serif;
 
 // Dead Rooster's Color Palette
 @mybrown: #873D35;
@@ -41,6 +41,10 @@ blockquote {
 img {
   margin: auto;
   max-width: 100%;
+}
+
+button { 
+  font-family: @headings-font-family;
 }
 
 .lead {
