Added post about Sardou/Chalumeau

--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -20,6 +20,13 @@ body {
   color: #444;
 }
 
+//h1, h2, h3, h4, h5 {
+//  margin-top: 1em;
+//  font-style: italic;
+//  font-weight: 400;
+//}
+
+
 li {
   font-size: inherit;
 }
