--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,11 @@
   
   {% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
   {% if page.title %}<meta property="og:title" content="{{ page.title }}">{% endif %}
-  <meta property="og:url" content="{{ page.url }}">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}">
   {% if page.description %}<meta property="og:site_name" content="{{ page.description }}">{% endif %}
   <meta property="og:type" content="article" />
   <meta property="og:locale" content="fr_FR" /> 
+  <meta property="fb:app_id" content="1596358550653612">
   <meta property="article:publisher" content="https://www.facebook.com/DeadRoosterBlog" />
   
   <link rel="stylesheet" href="{{ "/assets/css/application.min.css" | prepend: site.baseurl }}">
