--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,11 +12,12 @@
   {% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
   {% if page.title %}<meta property="og:title" content="{{ page.title }}">{% endif %}
   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-  {% if page.description %}<meta property="og:site_name" content="{{ page.description }}">{% endif %}
-  <meta property="og:type" content="article" />
-  <meta property="og:locale" content="fr_FR" /> 
+  {% if page.description %}<meta property="og:description" content="{{ page.description }}">{% endif %}
+  <meta property="og:type" content="article">
+  <meta property="og:locale" content="fr_FR"> 
+  {% if page.cover %}<meta property="og:image" content="{{ page.cover }}">{% endif %}
   <meta property="fb:app_id" content="1596358550653612">
-  <meta property="article:publisher" content="https://www.facebook.com/DeadRoosterBlog" />
+  <meta property="article:publisher" content="https://www.facebook.com/DeadRoosterBlog">
   
   <link rel="stylesheet" href="{{ "/assets/css/application.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
