--- a/assets/_less/deadrooster.less
+++ b/assets/_less/deadrooster.less
@@ -26,6 +26,10 @@ body {
 //  font-weight: 400;
 //}
 
+.embed-responsive {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 
 li {
   font-size: inherit;
