--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
   <script src="/assets/js/deadrooster.min.js"></script>
+  <script src="/assets/js/bigfoot.min.js"></script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,7 +28,7 @@
     ga('create', 'UA-8271681-13', 'auto');
     ga('send', 'pageview');
   </script>
-    
+
   {% if page.uuid %}
   <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES * * */
@@ -35,7 +36,7 @@
       var disqus_identifier = "{{ page.uuid }}";
       var disqus_title = "{{ page.title }}";
       var disqus_url = "{{ site.url }}{{ page.url }}";
-      
+
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
