--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
   <script src="/assets/js/deadrooster.min.js"></script>
   <script src="/assets/js/bigfoot.min.js"></script>
 
+
+  {% if jekyll.environment == "production" %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,6 +30,7 @@
     ga('create', 'UA-8271681-13', 'auto');
     ga('send', 'pageview');
   </script>
+  {% endif %}
 
   {% if page.uuid %}
   <script type="text/javascript">
