--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <script src="/assets/js/bigfoot.min.js"></script>
 
 
-  {% if jekyll.environment == "production" %}
+  {% if site.environment == "production" %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
