chore: get rid of Bower and update web deps

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,14 +18,14 @@
               {% if site.twitter_username %}
               <li>
                 <a href="https://twitter.com/{{ site.twitter_username }}">
-                  <i class="fa fa-twitter fa-2x"></i>
+                  <i class="fab fa-twitter fa-2x"></i>
                 </a>
               </li>
               {% endif %}
               {% if site.twitter_username %}
               <li>
                 <a href="https://www.facebook.com/{{ site.facebook_pagename }}">
-                  <i class="fa fa-facebook fa-2x"></i>
+                  <i class="fab fa-facebook fa-2x"></i>
                 </a>
               </li>
               {% endif %}
@@ -63,8 +63,8 @@
                 <img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
               </a>
               <br>
-              Ce(tte) œuvre est mise à disposition selon les termes de la 
-              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licence Creative Commons Attribution -  
+              Ce(tte) œuvre est mise à disposition selon les termes de la
+              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licence Creative Commons Attribution -
                 Partage dans les Mêmes Conditions 4.0 International
               </a>.
             </small>
