--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,8 @@
   <meta property="article:publisher" content="https://www.facebook.com/DeadRoosterBlog">
 
   <link rel="stylesheet" href="{{ "/assets/css/application.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/bigfoot-default.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/vendors/fontawesome/css/all.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/littlefoot.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
