--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,12 +18,12 @@
           {% endfor %}
           <li>
             <a href="https://twitter.com/{{ site.twitter_username }}">
-              <i class="fa fa-twitter"></i>
+              <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
             <a href="https://www.facebook.com/{{ site.facebook_pagename }}">
-              <i class="fa fa-facebook"></i>
+              <i class="fab fa-facebook"></i>
             </a>
           </li>
           <li>
