--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
 
   {% include footer.html %}
 
+  <script src="/assets/vendors/requirejs/require.js"></script>
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
   <script src="/assets/js/deadrooster.min.js"></script>
-  <script src="/assets/js/bigfoot.min.js"></script>
 
 
   {% if site.environment == "production" %}
