style: switch to SASS and Bootstrap 4.1

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,9 +19,8 @@
   <meta property="fb:app_id" content="1596358550653612">
   <meta property="article:publisher" content="https://www.facebook.com/DeadRoosterBlog">
 
-  <link rel="stylesheet" href="{{ "/assets/css/application.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/vendors/fontawesome/css/all.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/littlefoot.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
